RESOLVED FIXED304204
[GLIB] Flaky debug crashes due to assertion failure in ThreadedCompositor::renderLayerTree
https://bugs.webkit.org/show_bug.cgi?id=304204
Summary [GLIB] Flaky debug crashes due to assertion failure in ThreadedCompositor::re...
Lauro Moura
Reported 2025-12-15 13:40:28 PST
STDERR: ASSERTION FAILED: m_state.state == State::Scheduled STDERR: ../../../Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp(341) : void WebKit::ThreadedCompositor::renderLayerTree() This has been affecting many different tests, usually around 10 per run, for both GTK Debug and WPE Debug, rarely repeating. For example, in the last 11 WPE-Debug runs, 93 different tests triggered this, with just 15 triggering more than once. In the following GTK debug build, it affected 9 different tests: https://build.webkit.org/results/GTK-Linux-64-bit-Debug-Tests/304437@main%20(17732)/results.html fast/mediastream/video-mediastream-restricted-invisible-autoplay-user-click.html imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-main-frame-root.html imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-cues-missed.html imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-cues-pause-on-exit.html imported/w3c/web-platform-tests/media-source/mediasource-correct-frames-after-reappend.html imported/w3c/web-platform-tests/media-source/mediasource-correct-frames.html media/media-controller-timeupdate.html media/video-aspect-ratio.html Example of test that seems to trigger this a bit more frequently: imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-main-frame-root.html Results db: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcssom-view%2Fscroll-behavior-main-frame-root.html&platform=GTK&platform=WPE Local trace from a GTK build for the test above: (gdb) bt #0 WTFCrash () at ../../../Source/WTF/wtf/Assertions.cpp:380 #1 0x000072fa41a9f000 in WTFCrashWithInfo () at WTF/Headers/wtf/Assertions.h:985 #2 0x000072fa44782ddb in WebKit::ThreadedCompositor::renderLayerTree (this=0x72fa1b05c5d0) at ../../../Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:341 #3 0x000072fa4478a107 in WTF::RunLoop::Timer::Timer<WebKit::ThreadedCompositor>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral, WebKit::ThreadedCompositor*, void (WebKit::ThreadedCompositor::*)())::{lambda()#1}::operator()() const (__closure=0x72fa1b0d63d8) at WTF/Headers/wtf/RunLoop.h:210 #4 0x000072fa447a5c1c in WTF::Detail::CallableWrapper<WTF::RunLoop::Timer::Timer<WebKit::ThreadedCompositor>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral, WebKit::ThreadedCompositor*, void (WebKit::ThreadedCompositor::*)())::{lambda()#1}, void>::call() (this=0x72fa1b0d63d0) at WTF/Headers/wtf/Function.h:59 #5 0x000072fa41aa867b in WTF::Function<void ()>::operator()() const (this=0x72fa1b05c680) at WTF/Headers/wtf/Function.h:103 #6 0x000072fa42c664e4 in WTF::RunLoop::Timer::fired (this=0x72fa1b05c648) at WTF/Headers/wtf/RunLoop.h:262 #7 0x000072fa320d3911 in operator() (__closure=0x0, userData=0x72fa1b05c648) at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:252 #8 0x000072fa320d3955 in _FUN () at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:256 #9 0x000072fa320d2563 in operator() (__closure=0x0, source=0x5c3f881601e0, callback=0x72fa320d3934 <_FUN(gpointer)>, userData=0x72fa1b05c648) at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:57 #10 0x000072fa320d25b5 in _FUN () at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:60 #11 0x000072fa2c50b49e in ??? () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0 #12 0x000072fa2c50b710 in g_main_context_dispatch () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0 #13 0x000072fa320d2ecb in WTF::RunLoop::runGLibMainLoopIteration (this=0x72fa1b118110, mayBlock=WTF::RunLoop::MayBlock::Yes) at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:118 #14 0x000072fa320d2f3a in WTF::RunLoop::runGLibMainLoop (this=0x72fa1b118110) at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:127 #15 0x000072fa320d3002 in WTF::RunLoop::run () at ../../../Source/WTF/wtf/glib/RunLoopGLib.cpp:140 #16 0x000072fa31ee30f6 in operator() (__closure=0x72fa1b102bc8) at ../../../Source/WTF/wtf/RunLoop.cpp:111 #17 0x000072fa31ee876a in WTF::Detail::CallableWrapper<WTF::RunLoop::create(WTF::ASCIILiteral, WTF::ThreadType, WTF::Thread::QOS)::<lambda()>, void>::call(void) (this=0x72fa1b102bc0) at ../../../Source/WTF/wtf/Function.h:59 #18 0x000072fa3031811f in WTF::Function<void ()>::operator()() const (this=0x72f9bdf7e6f8) at WTF/Headers/wtf/Function.h:103 #19 0x000072fa32002cdb in WTF::Thread::entryPoint (newThreadContext=0x72fa1b038960) at ../../../Source/WTF/wtf/Threading.cpp:260 #20 0x000072fa320e76a5 in WTF::wtfThreadEntryPoint (context=0x72fa1b038960) at ../../../Source/WTF/wtf/posix/ThreadingPOSIX.cpp:245 #21 0x000072fa33869aa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447 #22 0x000072fa338f6c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
Attachments
Carlos Garcia Campos
Comment 1 2025-12-16 04:08:47 PST
EWS
Comment 2 2025-12-17 01:32:47 PST
Committed 304581@main (6cd29fa8c4e7): <https://commits.webkit.org/304581@main> Reviewed commits have been landed. Closing PR #55472 and removing active labels.
Carlos Garcia Campos
Comment 3 2025-12-19 00:36:02 PST
*** Bug 304173 has been marked as a duplicate of this bug. ***
Carlos Garcia Campos
Comment 4 2025-12-19 00:37:09 PST
*** Bug 304144 has been marked as a duplicate of this bug. ***
Michael Catanzaro
Comment 5 2026-01-02 15:44:24 PST
*** Bug 299882 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.